@@ -195,8 +195,8 @@ class ParserTree(ParserInterface):
                     'float': 80,
                     'numeric': 80,
                     'float_time': 100,
-                    'date': 90,
-                    'datetime': 140,
+                    'date': 110,
+                    'datetime': 160,
                     'selection': 90,
                     'char': 100,
                     'one2many': 50,
